force-app/main/default/objects/Communication__c/Communication__c.object-meta.xml
<CustomObject>
    <description>Communication Object stores the details of communication between Agent and Lead with necessary information like mode of communication, content and some other important fields.</description>
    <label>Communication</label>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>