force-app/main/default/objects/Communication__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>For call Notes are stored in it.
For Chat- message body is stored.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Content</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>