force-app/main/default/objects/Communication__c/fields/Medium_of_Communication__c.field-meta.xml
<CustomField>
    <fullName>Medium_of_Communication__c</fullName>
    <label>Medium of Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>call</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>chat</fullName>
            </value>
            <value>
                <fullName>whatsapp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>