force-app/main/default/objects/Communication__c/fields/Sid__c.field-meta.xml
<CustomField>
    <fullName>Sid__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>