force-app/main/default/objects/Communication__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>