force-app/main/default/objects/Communication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Medium_of_Communication__c</columns>
    <columns>Source_Object__c</columns>
    <columns>Status__c</columns>
    <columns>Is_Inbound__c</columns>
    <columns>Content__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>